# Ink-exploration

./: README.md
basics/contract-template/example/: Cargo.toml  lib.rs
basics/cross-contract-calling/basic-contract-caller/: Cargo.toml  lib.rs
basics/cross-contract-calling/basic-contract-caller/other-contract/: Cargo.toml  lib.rs
basics/events/: lib.rs
basics/storage/mutating-value/: lib.rs
basics/storage/reading-value/: lib.rs
basics/storage/storing-value/: lib.rs
basics/trait-definitions/: lib.rs
basics/upgradeable-contracts/: README.md
basics/upgradeable-contracts/set-code-hash/: lib.rs
basics/upgradeable-contracts/set-code-hash/updated-incrementer/: Cargo.toml  lib.rs
